# decklaunch

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  decklaunch-agent.service  install-agent.sh
agent/: Cargo.toml
agent/src/: main.rs
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/kieran/decklaunch/: MainActivity.kt  MediaSessionService.kt  NativeBridge.kt  SetupActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  input_bg.xml
android/app/src/main/res/layout/: activity_main.xml  activity_setup.xml
android/app/src/main/res/values/: strings.xml  styles.xml
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs  polling.rs  server.rs  state.rs  ws_agent.rs  ws_panel.rs
server/static/config/: config.js  index.html
server/static/panel/: index.html  panel.css  panel.js
server/ui/: build.mjs  package-lock.json  package.json
server/ui/config/: config.css  main.js
server/ui/panel/: main.js  panel.css
server/ui/shared/: icons.js
