[package]
name = "decklaunch-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decklaunch-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
hostname = "0.3"
futures-util = "0.3"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
