[package]
name = "decklaunch-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decklaunch-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
reqwest = { version = "0.11", features = ["json"] }
mime_guess = "2"
anyhow = "1"
base64 = "0.22"
